--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ mysql-connector-python==8.0.28
 pandas==1.3.4
 python-dotenv==0.20.0
 streamlit==1.8.0
+protobuf==3.20.*
+click==8.0.4
+typing-extensions==3.10.0.0
 
